Correct word wrape for items

--- a/src/blocks/dropDown/dropDown.scss
+++ b/src/blocks/dropDown/dropDown.scss
@@ -38,9 +38,11 @@
   }
 
   &__drop-item {
+    width: 132px;
     font-weight: bold;
     font-size: 12px;
     user-select: none;
+    word-wrap: break-word;
   }
 
   &__items {
